# approx

./: .gitignore  Makefile.am  README  config.h.in  configure.ac  doxygen.cfg
Documentation/: Hauptseminar-Verteidigung.odp  Hauptseminar.odt  Hypothese.tex  hs_read.m  praktikum.tex  praktikum.toc  title.tex
approx/: Makefile.am  approx_qrs.c  qrs_approx.c
doc/: Hypothese.tex  praktikum.tex  praktikum.toc  title.tex
include/: cmdline.h  splineapprox.h
include/argos/: argos_read_data.h  argos_read_header.h
include/cspl/: cspl.h  cspl_qrs.h  cspl_qrs_fit.h
include/signal_processing/: signal_processing.h  signal_processing_QRS.h
lib/: Makefile.am  argos_read_data.c  argos_read_header.c  cmdline.c  cmdline.ggo  cmdline.h  cspl.pc.in  cspl_math.c  cspl_qrs.c  cspl_qrs_fit.c  signal_processing.c  signal_processing.pc.in  signal_processing_QRS.c  signal_processing_QRS_fit.c  signal_processing_fit.c
qrs/: Makefile.am  main.c
spline_approx/: qrsfit.c
templates/: .vimrc  c  h
tests/: test_xcorr.c  xcorr_threads.c
