INCLUDES = -I $(top_srcdir)/include/
lib_LTLIBRARIES = libsignal_processing.la
libsignal_processing_la_includedir = $(top_srcdir)/include/signal_processing
libsignal_processing_la_include_HEADRS = signal_processing.h
libsignal_processing_la_SOURCES = signal_processing.c signal_processing_QRS.c signal_processing_QRS_fit.c 

